@@ -16,6 +16,8 @@
 
 2016-07-06  Carl Hetherington  <cth@carlh.net>
 
+	* Allow import of some more types of DNxHR file.
+
 	* Version 2.8.19 released.
 
 2016-07-05  c.hetherington  <cth@carlh.net>
